<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff4f2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topCircle1"
        android:layout_width="134dp"
        android:layout_height="116dp"
        android:layout_marginEnd="292dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/imageofcircle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/circle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        app:circularflow_defaultRadius="5dp"
        app:circularflow_radiusInDP="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:0.65"
        app:layout_constraintLeft_toLeftOf="parent">


        <!--        dont have an account? Sign up sign up needs to be in black and clickable-->
        <!--        don't have an account must be white and not clickable-->

        <TextView
            android:id="@+id/forgotYourPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/userPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="Login"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/loginText"
            app:layout_constraintTop_toBottomOf="@+id/loginText" />


        <!--        I want this text to be clickable so that when user clicks on sign up they go to sign up page-->

        <EditText
            android:id="@+id/userEmail"
            style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="355dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rounded_details"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/emailText"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/userEmail"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <EditText
            android:id="@+id/userPassword"
            style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
            android:layout_width="355dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_details"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/userEmail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/rounded_details"
            android:backgroundTint="#FEFEFE"
            android:backgroundTintMode="src_over"
            android:text="@string/login"
            android:textColor="#50C1C8"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/userPassword"
            app:layout_constraintStart_toStartOf="@+id/userPassword"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <TextView
            android:id="@+id/dontHaveAnAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userPassword"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="@+id/userPassword" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signUpUnderline"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/dontHaveAnAccountText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="281dp"
        android:layout_height="57dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="113dp"
        android:layout_height="119dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="344dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle" />

</androidx.constraintlayout.widget.ConstraintLayout>